--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "Just a tutorial ",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node app.js",
+    "dev": "nodemon app.js"
   },
   "author": "Kanjam Bhat Lidhoo",
   "license": "ISC",
   "dependencies": {
     "bootstrap": "^5.2.2",
     "lodash": "^4.17.21"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.20"
   }
 }
