--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "description": "Just a tutorial ",
   "main": "app.js",
   "scripts": {
-    "start": "node app.js",
-    "dev": "nodemon app.js"
+    "start": "nodemon app.js"
   },
   "author": "Kanjam Bhat Lidhoo",
   "license": "ISC",
